k8s/overlays/postgres/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-manager
spec:
  template:
    spec:
      containers:
        - name: nginx-proxy-manager
